--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+.DS_Store
 node_modules
-client/dist
-server/build
-client/public/package_versions.json
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
