--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-  "name": "lean4web",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": ".",
-  "dependencies": {
+	"name": "lean-manual-logic",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+        "start_server": "cd server && NODE_ENV=development nodemon ./index.js",
+        "start_client": "NODE_ENV=development webpack-dev-server --hot && cd ..",
+        "trybuild": "cd Logic-Manual-Online-Edition && npm run build_client && cd .. && vite build",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+  "dependencies": { "done",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
@@ -34,49 +46,44 @@
     "vscode-ws-jsonrpc": "^2.0.0",
     "ws": "^8.9.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
-    "@svgr/webpack": "^6.5.1",
-    "@testing-library/react": "^13.4.0",
-    "@types/file-saver": "^2.0.5",
-    "babel-loader": "^8.2.5",
-    "concurrently": "^7.4.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "json-loader": "^0.5.7",
-    "nodemon": "^2.0.20",
-    "react-refresh": "^0.14.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "scripts": {
-    "start": "concurrently -n server,client -c blue,green \"npm run start_server\" \"npm run start_client\"",
-    "start_server": "cd server && NODE_ENV=development nodemon ./index.js",
-    "start_client": "NODE_ENV=development webpack-dev-server --hot",
-    "build": "npm run build_server && npm run build_client",
-    "build_server": "server/build.sh",
-    "build_client": "NODE_ENV=production webpack",
-    "production": "NODE_ENV=production node server/index.js"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"devDependencies": {
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2",
+        "@babel/cli": "^7.1.0",
+        "@babel/core": "^7.1.0",
+        "@babel/preset-env": "^7.1.0",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+        "@svgr/webpack": "^6.5.1",
+        "@testing-library/react": "^13.4.0",
+        "@types/file-saver": "^2.0.5",
+        "babel-loader": "^8.2.5",
+        "concurrently": "^7.4.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "json-loader": "^0.5.7",
+        "nodemon": "^2.0.20",
+        "react-refresh": "^0.14.0",
+        "style-loader": "^3.3.1",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
+	},
+	"type": "module"
 }
