--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-        "start_server": "cd server && NODE_ENV=development nodemon ./index.js",
-        "start_client": "NODE_ENV=development webpack-dev-server --hot && cd ..",
-        "trybuild": "cd Logic-Manual-Online-Edition && npm run build_client && cd .. && vite build",
+		"start_server": "cd server && NODE_ENV=development nodemon ./index.js",
+		"start_client": "NODE_ENV=development webpack-dev-server --hot && cd ..",
+		"build_server": "server/build.sh",
+		"build_client": "NODE_ENV=production webpack",
+		"trybuild": "cd Logic-Manual-Online-Edition && npm run build_client && cd .. && vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,75 +17,85 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
-  "dependencies": { "done",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^4.5.8",
-    "@fontsource/roboto-mono": "^4.5.8",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@leanprover/infoview": "^0.4.1",
-    "@mui/material": "^5.13.7",
-    "express": "^4.18.2",
-    "file-saver": "^2.0.5",
-    "ip-anonymize": "^0.1.0",
-    "lean4": "https://gitpkg.now.sh/leanprover/vscode-lean4/vscode-lean4?79d345c739bf707024eef5057ccef81b404a2ddf",
-    "mobx": "^6.6.2",
-    "moment-timezone": "^0.5.39",
-    "monaco-editor": "^0.34.1",
-    "monaco-editor-textmate": "^4.0.0",
-    "monaco-languageclient": "^4.0.1",
-    "monaco-textmate": "^3.0.1",
-    "nocache": "^3.0.4",
-    "onigasm": "^2.2.5",
-    "path-browserify": "^1.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
-    "react-split": "^2.0.14",
-    "stream-http": "^3.2.0",
-    "vscode-ws-jsonrpc": "^2.0.0",
-    "ws": "^8.9.0"
-  },
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^4.5.8",
+		"@fontsource/roboto-mono": "^4.5.8",
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@leanprover/infoview": "^0.4.1",
+		"@mui/material": "^5.13.7",
+		"express": "^4.18.2",
+		"file-saver": "^2.0.5",
+		"ip-anonymize": "^0.1.0",
+		"lean4": "https://gitpkg.now.sh/leanprover/vscode-lean4/vscode-lean4?79d345c739bf707024eef5057ccef81b404a2ddf",
+		"mobx": "^6.6.2",
+		"moment-timezone": "^0.5.39",
+		"monaco-editor": "^0.34.1",
+		"monaco-editor-textmate": "^4.0.0",
+		"monaco-languageclient": "^4.0.1",
+		"monaco-textmate": "^3.0.1",
+		"nocache": "^3.0.4",
+		"onigasm": "^2.2.5",
+		"path-browserify": "^1.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-popper": "^2.3.0",
+		"react-split": "^2.0.14",
+		"stream-http": "^3.2.0",
+		"svelte-preprocess-react": "^0.16.0",
+		"vscode-ws-jsonrpc": "^2.0.0",
+		"ws": "^8.9.0"
+	},
 	"devDependencies": {
+		"@babel/cli": "^7.1.0",
+		"@babel/core": "^7.1.0",
+		"@babel/preset-env": "^7.1.0",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/preset-typescript": "^7.18.6",
 		"@playwright/test": "^1.28.1",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@svgr/webpack": "^6.5.1",
+		"@testing-library/react": "^13.4.0",
+		"@types/file-saver": "^2.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"babel-loader": "^8.2.5",
+		"concurrently": "^7.4.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.7.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"json-loader": "^0.5.7",
+		"nodemon": "^2.0.20",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"react-refresh": "^0.14.0",
+		"style-loader": "^3.3.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"ts-loader": "^9.4.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^4.8.4",
 		"vite": "^4.4.2",
-        "@babel/cli": "^7.1.0",
-        "@babel/core": "^7.1.0",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.18.6",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
-        "@svgr/webpack": "^6.5.1",
-        "@testing-library/react": "^13.4.0",
-        "@types/file-saver": "^2.0.5",
-        "babel-loader": "^8.2.5",
-        "concurrently": "^7.4.0",
-        "copy-webpack-plugin": "^11.0.0",
-        "css-loader": "^6.7.1",
-        "json-loader": "^0.5.7",
-        "nodemon": "^2.0.20",
-        "react-refresh": "^0.14.0",
-        "style-loader": "^3.3.1",
-        "ts-loader": "^9.4.1",
-        "typescript": "^4.8.4",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1"
+		"webpack-dev-server": "^4.11.1"
 	},
-	"type": "module"
+	"type": "module",
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
